tests/generics/GenCannotDoRep1_8.stderr
GenCannotDoRep1_8.hs:12:30: error: [GHC-30367]
    • Can't make a derived instance of ‘Generic1 T’:
        Constructor ‘T’ applies a type to an argument involving the last parameter
                        but the applied type is not of kind * -> *
    • In the data type declaration for ‘T’

